# periodic

./: README.md  pyproject.toml
periodic/: tasks.py
