[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "periodic"
version = "0.1.0"
description = "A lightweight async task loop system inspired by discord.py tasks"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
    { name = "MrBaconHat" }
]

dependencies = []


[project.urls]
Homepage = "https://github.com/MrBaconHat/periodic"
Repository = "https://github.com/MrBaconHat/periodic"
Issues = "https://github.com/MrBaconHat/periodic/issues"


# =========================
# MYPY CONFIGURATION
# =========================
[tool.mypy]
python_version = "3.13"

strict = true

pretty = true
show_error_codes = true
show_column_numbers = true

warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true

check_untyped_defs = true

disallow_untyped_defs = true
disallow_incomplete_defs = true

no_implicit_optional = true

ignore_missing_imports = true


[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []